# exoboots

./: .gitignore  LICENSE  README.md  pyproject.toml  settings.txt
examples/PIONIER_kappaTucA/: 2012-07-23_SCI_HD7788_oiDataCalib.fits  2013-08-10_SCI_HD7788_oidataCalibrated.fits  2014-10-11_SCI_HD7788_oidataCalibrated.fits  example_notebook.ipynb
src/: bootstrapping.py  data_handling.py  model_functions.py  plotting.py
src/exoboots/: __init__.py  bootstrapping.py  data_handling.py  exceptions.py  model_functions.py  plotting.py
